@@ -111,7 +111,7 @@
 	
 	<tr>
 	  <td>Stable</td>
-	  <td>2.4.5</td>
+	  <td>2.4.6</td>
 	  <td>
 	    <a href="../doc/v2.4/Documentation/out-www/">Documentation</a>,
 	    <a href="install/#2.4">download</a>.
